# SeekCytometer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CytometerController.cpp  CytometerController.h  MainWindow.cpp  MainWindow.h  main.cpp  resource.qrc
data_manage/: ChartBuffer.h  DataManager.cpp  DataManager.h  EventData.cpp  EventData.h  EventDataManager.cpp  EventDataManager.h  Logger.cpp  Logger.h  RingBuffer.h
data_visualization/: AxiTypeSwitchButton.cpp  AxiTypeSwitchButton.h  AxisAutoAdjustButton.cpp  AxisAutoAdjustButton.h  AxisLockButtonItem.cpp  AxisLockButtonItem.h  CustomAxis.cpp  CustomAxis.h  EllipseGateItem.cpp  EllipseGateItem.h  GateItem.cpp  GateItem.h  GateItemFactory.cpp  GateItemFactory.h  HistogramPlot.cpp  HistogramPlot.h  IntervalGateItem.cpp  IntervalGateItem.h  PlotBase.cpp  PlotBase.h  PolygonGateItem.cpp  PolygonGateItem.h  QuadrantGateItem.cpp  QuadrantGateItem.h  RectangleGateItem.cpp  RectangleGateItem.h  SaveImageButtonItem.cpp  SaveImageButtonItem.h  ScatterPlot.cpp  ScatterPlot.h  Waveform.cpp  Waveform.h  WaveformView.cpp  WaveformView.h  WorkSheetScene.cpp  WorkSheetScene.h  WorkSheetView.cpp  WorkSheetView.h
database/: BaseDAO.cpp  BaseDAO.h  BrowserData.cpp  BrowserData.h  BrowserDataDAO.cpp  BrowserDataDAO.h  CytometerSettings.cpp  CytometerSettings.h  CytometerSettingsDAO.cpp  CytometerSettingsDAO.h  DatabaseManager.cpp  DatabaseManager.h  Detector.cpp  Detector.h  DetectorSettings.cpp  DetectorSettings.h  DetectorSettingsDAO.cpp  DetectorSettingsDAO.h  DetectorsDAO.cpp  DetectorsDAO.h  Experiment.cpp  Experiment.h  ExperimentsDAO.cpp  ExperimentsDAO.h  Gate.cpp  Gate.h  GatesDAO.cpp  GatesDAO.h  MeasurementTypeHelper.cpp  MeasurementTypeHelper.h  NodeTypeHelper.cpp  NodeTypeHelper.h  Plot.cpp  Plot.h  PlotsDAO.cpp  PlotsDAO.h  Specimen.cpp  Specimen.h  SpecimensDAO.cpp  SpecimensDAO.h  (+12 more)
datamodel/: BrowserDataModel.cpp  BrowserDataModel.h  DetectorModel.cpp  DetectorModel.h  DetectorSettingsModel.cpp  DetectorSettingsModel.h  GatesModel.cpp  GatesModel.h  TreeModel.cpp  TreeModel.h  TreeNode.cpp  TreeNode.h  TubeSelectModel.cpp  TubeSelectModel.h
delegate/: CheckBoxDelegate.cpp  CheckBoxDelegate.h  TubeButtonDelegate.cpp  TubeButtonDelegate.h
dialogs/: AddNewDetectorDialog.cpp  AddNewDetectorDialog.h  AddNewItemDialog.cpp  AddNewItemDialog.h  AddNewPlotDialog.cpp  AddNewPlotDialog.h  LoginDialog.cpp  LoginDialog.h  UserManageDialog.cpp  UserManageDialog.h
network/: NetworkClient.cpp  NetworkClient.h  NetworkFrame.cpp  NetworkFrame.h  UdpCommClient.cpp  UdpCommClient.h  UdpCommFrame.cpp  UdpCommFrame.h
sql/: create_db_seekcytometer.sql  fetch_browser_data.sql  insert_data.sql  query_data.sql  test_trigger.sql  trigger_functions.sql
test/: TestDataGenerator.cpp  TestDataGenerator.h
widgets/: BrowserView.cpp  BrowserView.h  CustomStatusBar.cpp  CustomStatusBar.h  CytometerGeneralInfo.cpp  CytometerGeneralInfo.h  CytometerSettingsWidget.cpp  CytometerSettingsWidget.h  DataAcquisitionWidget.cpp  DataAcquisitionWidget.h  DetectorSettingsWidget.cpp  DetectorSettingsWidget.h  ExperimentsBrowser.cpp  ExperimentsBrowser.h  MenuBarManager.cpp  MenuBarManager.h  MicroFluidicWidget.cpp  MicroFluidicWidget.h  OpticsControlWidget.cpp  OpticsControlWidget.h  SampleChipWidget.cpp  SampleChipWidget.h  SortingWidget.cpp  SortingWidget.h  SpeedMeasureWidget.cpp  SpeedMeasureWidget.h  StatusIndicator.cpp  StatusIndicator.h  WaveformWidget.cpp  WaveformWidget.h  WorkSheetWidget.cpp  WorkSheetWidget.h
